// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-range-picker-component (rangePicker mode) final snapshot (input-group mode) still renders correctly with dropdown wrapper 1`] = `
<date-range-picker-component>
  <div class="date-picker">
    <div class="dropdown-wrapper">
      <div>
        <div class="form-group form-input-group-basic">
          <label aria-hidden="true" class="form-control-label" htmlfor="drp" id="drp-label">
            <span>
              Date Range Picker
            </span>
          </label>
          <div>
            <div aria-label="Date Picker Group" class="input-group" role="group">
              <div class="drp-input-field">
                <input aria-describedby="datepicker-desc" aria-labelledby="drp-label" class="form-control" id="drp" placeholder="YYYY-MM-DD  -  YYYY-MM-DD" type="text" value="">
              </div>
              <div class="input-group-append">
                <button aria-expanded="false" aria-haspopup="dialog" aria-label="Toggle Calendar Picker" class="btn calendar-button input-group-text">
                  <i class="fa-calendar-alt fas"></i>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="dropdown">
        <div aria-labelledby="datepicker-desc" aria-modal="true" class="dropdown-content" role="dialog" tabindex="-1">
          <div class="date-picker">
            <div aria-label="Date Range Picker" class="range-picker-wrapper" role="region">
              <div aria-label="Navigation Controls" class="mb-1 range-picker-nav">
                <button aria-label="Previous Month" class="btn-outline-secondary range-picker-nav-btn">
                  <svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                    <path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c-12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path>
                  </svg>
                </button>
                <div class="selectors">
                  <label class="sr-only visually-hidden" htmlfor="months" id="monthSelectField">
                    Select Month
                  </label>
                  <select aria-label="Select Month" aria-labelledby="monthSelectField" class="form-control form-select months select-sm" id="months" role="listbox">
                    <option value="0">
                      January
                    </option>
                    <option selected="" value="1">
                      February
                    </option>
                    <option value="2">
                      March
                    </option>
                    <option value="3">
                      April
                    </option>
                    <option value="4">
                      May
                    </option>
                    <option value="5">
                      June
                    </option>
                    <option value="6">
                      July
                    </option>
                    <option value="7">
                      August
                    </option>
                    <option value="8">
                      September
                    </option>
                    <option value="9">
                      October
                    </option>
                    <option value="10">
                      November
                    </option>
                    <option value="11">
                      December
                    </option>
                  </select>
                  <label class="sr-only visually-hidden" htmlfor="year" id="yearSelectField">
                    Select Year
                  </label>
                  <select aria-label="Select Year" aria-labelledby="yearSelectField" class="form-control form-select select-sm years" id="year" role="listbox">
                    <option value="2014">
                      2014
                    </option>
                    <option value="2015">
                      2015
                    </option>
                    <option value="2016">
                      2016
                    </option>
                    <option value="2017">
                      2017
                    </option>
                    <option value="2018">
                      2018
                    </option>
                    <option value="2019">
                      2019
                    </option>
                    <option value="2020">
                      2020
                    </option>
                    <option value="2021">
                      2021
                    </option>
                    <option value="2022">
                      2022
                    </option>
                    <option value="2023">
                      2023
                    </option>
                    <option value="2024">
                      2024
                    </option>
                    <option value="2025">
                      2025
                    </option>
                    <option selected="" value="2026">
                      2026
                    </option>
                    <option value="2027">
                      2027
                    </option>
                    <option value="2028">
                      2028
                    </option>
                    <option value="2029">
                      2029
                    </option>
                    <option value="2030">
                      2030
                    </option>
                    <option value="2031">
                      2031
                    </option>
                    <option value="2032">
                      2032
                    </option>
                    <option value="2033">
                      2033
                    </option>
                    <option value="2034">
                      2034
                    </option>
                  </select>
                  <button aria-label="Reset Calendar" class="reset-btn">
                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                      <path d="M48.5 224L40 224c-13.3 0-24-10.7-24-24L16 72c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2L98.6 96.6c87.6-86.5 228.7-86.2 315.8 1c87.5 87.5 87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3c-62.2-62.2-162.7-62.5-225.3-1L185 183c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8L48.5 224z"></path>
                    </svg>
                  </button>
                </div>
                <button aria-label="Next Month" class="btn-outline-secondary range-picker-nav-btn">
                  <svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                    <path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s-32.8-12.5 45.3 0l160 160z"></path>
                  </svg>
                </button>
              </div>
              <div class="range-picker">
                <div aria-label="Calendars" class="calendar-wrapper" role="application" tabindex="0">
                  <div aria-label="Calendar for February 2026" aria-roledescription="Calendar" class="calendar dp-calendar form-control h-auto pt-2 text-center" role="grid" tabindex="0">
                    <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="calendar-grid-caption">
                      February 2026
                    </div>
                    <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
                      <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                        Sun
                      </small>
                      <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                        Mon
                      </small>
                      <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                        Tue
                      </small>
                      <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                        Wed
                      </small>
                      <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                        Thu
                      </small>
                      <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                        Fri
                      </small>
                      <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                        Sat
                      </small>
                    </div>
                    <div class="calendar-grid" role="grid">
                      <div aria-label="February 1, 2026" class="calendar-grid-item csm-first-day" data-date="2026-02-01" data-day="1" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="February 2, 2026" class="calendar-grid-item" data-date="2026-02-02" data-day="2" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="February 3, 2026" class="calendar-grid-item" data-date="2026-02-03" data-day="3" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="February 4, 2026" class="calendar-grid-item" data-date="2026-02-04" data-day="4" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="February 5, 2026" class="calendar-grid-item" data-date="2026-02-05" data-day="5" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="February 6, 2026" class="calendar-grid-item" data-date="2026-02-06" data-day="6" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="February 7, 2026" class="calendar-grid-item" data-date="2026-02-07" data-day="7" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="February 8, 2026" class="calendar-grid-item" data-date="2026-02-08" data-day="8" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="February 9, 2026" class="calendar-grid-item" data-date="2026-02-09" data-day="9" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="February 10, 2026" class="calendar-grid-item" data-date="2026-02-10" data-day="10" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="February 11, 2026" class="calendar-grid-item" data-date="2026-02-11" data-day="11" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          11
                        </span>
                      </div>
                      <div aria-label="February 12, 2026" class="calendar-grid-item" data-date="2026-02-12" data-day="12" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          12
                        </span>
                      </div>
                      <div aria-label="February 13, 2026" class="calendar-grid-item" data-date="2026-02-13" data-day="13" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          13
                        </span>
                      </div>
                      <div aria-label="February 14, 2026" class="calendar-grid-item" data-date="2026-02-14" data-day="14" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          14
                        </span>
                      </div>
                      <div aria-label="February 15, 2026" class="calendar-grid-item" data-date="2026-02-15" data-day="15" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          15
                        </span>
                      </div>
                      <div aria-label="February 16, 2026" class="calendar-grid-item" data-date="2026-02-16" data-day="16" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          16
                        </span>
                      </div>
                      <div aria-label="February 17, 2026" class="calendar-grid-item" data-date="2026-02-17" data-day="17" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          17
                        </span>
                      </div>
                      <div aria-label="February 18, 2026" class="calendar-grid-item" data-date="2026-02-18" data-day="18" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light current-day font-weight-bold rounded-circle text-dark text-nowrap">
                          18
                        </span>
                      </div>
                      <div aria-label="February 19, 2026" class="calendar-grid-item" data-date="2026-02-19" data-day="19" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          19
                        </span>
                      </div>
                      <div aria-label="February 20, 2026" class="calendar-grid-item" data-date="2026-02-20" data-day="20" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          20
                        </span>
                      </div>
                      <div aria-label="February 21, 2026" class="calendar-grid-item" data-date="2026-02-21" data-day="21" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          21
                        </span>
                      </div>
                      <div aria-label="February 22, 2026" class="calendar-grid-item" data-date="2026-02-22" data-day="22" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          22
                        </span>
                      </div>
                      <div aria-label="February 23, 2026" class="calendar-grid-item" data-date="2026-02-23" data-day="23" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          23
                        </span>
                      </div>
                      <div aria-label="February 24, 2026" class="calendar-grid-item" data-date="2026-02-24" data-day="24" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          24
                        </span>
                      </div>
                      <div aria-label="February 25, 2026" class="calendar-grid-item" data-date="2026-02-25" data-day="25" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          25
                        </span>
                      </div>
                      <div aria-label="February 26, 2026" class="calendar-grid-item" data-date="2026-02-26" data-day="26" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          26
                        </span>
                      </div>
                      <div aria-label="February 27, 2026" class="calendar-grid-item" data-date="2026-02-27" data-day="27" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          27
                        </span>
                      </div>
                      <div aria-label="February 28, 2026" class="calendar-grid-item csm-last-day" data-date="2026-02-28" data-day="28" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          28
                        </span>
                      </div>
                      <div aria-label="March 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-01" data-day="1" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="March 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-02" data-day="2" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="March 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-03" data-day="3" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="March 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-04" data-day="4" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="March 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-05" data-day="5" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="March 6, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-06" data-day="6" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="March 7, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-07" data-day="7" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="March 8, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-08" data-day="8" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="March 9, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-09" data-day="9" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="March 10, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-10" data-day="10" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="March 11, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-11" data-day="11" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          11
                        </span>
                      </div>
                      <div aria-label="March 12, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-12" data-day="12" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          12
                        </span>
                      </div>
                      <div aria-label="March 13, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-13" data-day="13" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          13
                        </span>
                      </div>
                      <div aria-label="March 14, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-14" data-day="14" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          14
                        </span>
                      </div>
                    </div>
                  </div>
                  <div aria-label="Calendar for March 2026" aria-roledescription="Calendar" class="calendar dp-calendar form-control h-auto pt-2 text-center" role="grid" tabindex="0">
                    <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="calendar-grid-caption">
                      March 2026
                    </div>
                    <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
                      <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                        Sun
                      </small>
                      <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                        Mon
                      </small>
                      <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                        Tue
                      </small>
                      <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                        Wed
                      </small>
                      <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                        Thu
                      </small>
                      <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                        Fri
                      </small>
                      <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                        Sat
                      </small>
                    </div>
                    <div class="calendar-grid" role="grid">
                      <div aria-label="March 1, 2026" class="calendar-grid-item cem-first-day" data-date="2026-03-01" data-day="1" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="March 2, 2026" class="calendar-grid-item" data-date="2026-03-02" data-day="2" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="March 3, 2026" class="calendar-grid-item" data-date="2026-03-03" data-day="3" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="March 4, 2026" class="calendar-grid-item" data-date="2026-03-04" data-day="4" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="March 5, 2026" class="calendar-grid-item" data-date="2026-03-05" data-day="5" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="March 6, 2026" class="calendar-grid-item" data-date="2026-03-06" data-day="6" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="March 7, 2026" class="calendar-grid-item" data-date="2026-03-07" data-day="7" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="March 8, 2026" class="calendar-grid-item" data-date="2026-03-08" data-day="8" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="March 9, 2026" class="calendar-grid-item" data-date="2026-03-09" data-day="9" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="March 10, 2026" class="calendar-grid-item" data-date="2026-03-10" data-day="10" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="March 11, 2026" class="calendar-grid-item" data-date="2026-03-11" data-day="11" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          11
                        </span>
                      </div>
                      <div aria-label="March 12, 2026" class="calendar-grid-item" data-date="2026-03-12" data-day="12" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          12
                        </span>
                      </div>
                      <div aria-label="March 13, 2026" class="calendar-grid-item" data-date="2026-03-13" data-day="13" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          13
                        </span>
                      </div>
                      <div aria-label="March 14, 2026" class="calendar-grid-item" data-date="2026-03-14" data-day="14" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          14
                        </span>
                      </div>
                      <div aria-label="March 15, 2026" class="calendar-grid-item" data-date="2026-03-15" data-day="15" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          15
                        </span>
                      </div>
                      <div aria-label="March 16, 2026" class="calendar-grid-item" data-date="2026-03-16" data-day="16" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          16
                        </span>
                      </div>
                      <div aria-label="March 17, 2026" class="calendar-grid-item" data-date="2026-03-17" data-day="17" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          17
                        </span>
                      </div>
                      <div aria-label="March 18, 2026" class="calendar-grid-item" data-date="2026-03-18" data-day="18" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          18
                        </span>
                      </div>
                      <div aria-label="March 19, 2026" class="calendar-grid-item" data-date="2026-03-19" data-day="19" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          19
                        </span>
                      </div>
                      <div aria-label="March 20, 2026" class="calendar-grid-item" data-date="2026-03-20" data-day="20" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          20
                        </span>
                      </div>
                      <div aria-label="March 21, 2026" class="calendar-grid-item" data-date="2026-03-21" data-day="21" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          21
                        </span>
                      </div>
                      <div aria-label="March 22, 2026" class="calendar-grid-item" data-date="2026-03-22" data-day="22" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          22
                        </span>
                      </div>
                      <div aria-label="March 23, 2026" class="calendar-grid-item" data-date="2026-03-23" data-day="23" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          23
                        </span>
                      </div>
                      <div aria-label="March 24, 2026" class="calendar-grid-item" data-date="2026-03-24" data-day="24" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          24
                        </span>
                      </div>
                      <div aria-label="March 25, 2026" class="calendar-grid-item" data-date="2026-03-25" data-day="25" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          25
                        </span>
                      </div>
                      <div aria-label="March 26, 2026" class="calendar-grid-item" data-date="2026-03-26" data-day="26" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          26
                        </span>
                      </div>
                      <div aria-label="March 27, 2026" class="calendar-grid-item" data-date="2026-03-27" data-day="27" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          27
                        </span>
                      </div>
                      <div aria-label="March 28, 2026" class="calendar-grid-item" data-date="2026-03-28" data-day="28" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          28
                        </span>
                      </div>
                      <div aria-label="March 29, 2026" class="calendar-grid-item" data-date="2026-03-29" data-day="29" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          29
                        </span>
                      </div>
                      <div aria-label="March 30, 2026" class="calendar-grid-item" data-date="2026-03-30" data-day="30" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          30
                        </span>
                      </div>
                      <div aria-label="March 31, 2026" class="calendar-grid-item cem-last-day" data-date="2026-03-31" data-day="31" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          31
                        </span>
                      </div>
                      <div aria-label="April 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-01" data-day="1" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="April 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-02" data-day="2" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="April 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-03" data-day="3" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="April 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-04" data-day="4" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="April 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-05" data-day="5" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="April 6, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-06" data-day="6" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="April 7, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-07" data-day="7" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="April 8, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-08" data-day="8" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="April 9, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-09" data-day="9" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="April 10, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-10" data-day="10" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="April 11, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-11" data-day="11" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          11
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <footer class="border-top small text-center">
                  <div aria-live="polite" class="small">
                    Use cursor keys to navigate calendar dates
                  </div>
                </footer>
                <div aria-labelledby="date-ranges" class="date-range-display" role="region" tabindex="0">
                  <div class="date-ranges" id="date-ranges">
                    <span class="start-end-ranges">
                      <span class="start-date">
                        N/A
                      </span>
                      <span class="to-spacing">
                        -
                      </span>
                      <span class="end-date">
                        N/A
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div class="ok-button">
                <button aria-label="Confirm or close date picker" class="btn btn-primary">
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</date-range-picker-component>
`;

exports[`date-range-picker-component (rangePicker mode) renders and matches snapshot (initial) 1`] = `
<date-range-picker-component rangepicker="true">
  <div class="date-picker">
    <div class="dropdown-wrapper">
      <div>
        <div class="form-group form-input-group-basic">
          <label aria-hidden="true" class="form-control-label" htmlfor="drp" id="drp-label">
            <span>
              Date Range Picker
            </span>
          </label>
          <div>
            <div aria-label="Date Picker Group" class="input-group" role="group">
              <div class="drp-input-field">
                <input aria-describedby="datepicker-desc" aria-labelledby="drp-label" class="form-control" id="drp" placeholder="YYYY-MM-DD  -  YYYY-MM-DD" type="text" value="">
              </div>
              <div class="input-group-append">
                <button aria-expanded="false" aria-haspopup="dialog" aria-label="Toggle Calendar Picker" class="btn calendar-button input-group-text">
                  <i class="fa-calendar-alt fas"></i>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="dropdown">
        <div aria-labelledby="datepicker-desc" aria-modal="true" class="dropdown-content" role="dialog" tabindex="-1">
          <div class="date-picker">
            <div aria-label="Date Range Picker" class="range-picker-wrapper" role="region">
              <div aria-label="Navigation Controls" class="mb-1 range-picker-nav">
                <button aria-label="Previous Month" class="btn-outline-secondary range-picker-nav-btn">
                  <svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                    <path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c-12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path>
                  </svg>
                </button>
                <div class="selectors">
                  <label class="sr-only visually-hidden" htmlfor="months" id="monthSelectField">
                    Select Month
                  </label>
                  <select aria-label="Select Month" aria-labelledby="monthSelectField" class="form-control form-select months select-sm" id="months" role="listbox">
                    <option value="0">
                      January
                    </option>
                    <option selected="" value="1">
                      February
                    </option>
                    <option value="2">
                      March
                    </option>
                    <option value="3">
                      April
                    </option>
                    <option value="4">
                      May
                    </option>
                    <option value="5">
                      June
                    </option>
                    <option value="6">
                      July
                    </option>
                    <option value="7">
                      August
                    </option>
                    <option value="8">
                      September
                    </option>
                    <option value="9">
                      October
                    </option>
                    <option value="10">
                      November
                    </option>
                    <option value="11">
                      December
                    </option>
                  </select>
                  <label class="sr-only visually-hidden" htmlfor="year" id="yearSelectField">
                    Select Year
                  </label>
                  <select aria-label="Select Year" aria-labelledby="yearSelectField" class="form-control form-select select-sm years" id="year" role="listbox">
                    <option value="2014">
                      2014
                    </option>
                    <option value="2015">
                      2015
                    </option>
                    <option value="2016">
                      2016
                    </option>
                    <option value="2017">
                      2017
                    </option>
                    <option value="2018">
                      2018
                    </option>
                    <option value="2019">
                      2019
                    </option>
                    <option value="2020">
                      2020
                    </option>
                    <option value="2021">
                      2021
                    </option>
                    <option value="2022">
                      2022
                    </option>
                    <option value="2023">
                      2023
                    </option>
                    <option value="2024">
                      2024
                    </option>
                    <option value="2025">
                      2025
                    </option>
                    <option selected="" value="2026">
                      2026
                    </option>
                    <option value="2027">
                      2027
                    </option>
                    <option value="2028">
                      2028
                    </option>
                    <option value="2029">
                      2029
                    </option>
                    <option value="2030">
                      2030
                    </option>
                    <option value="2031">
                      2031
                    </option>
                    <option value="2032">
                      2032
                    </option>
                    <option value="2033">
                      2033
                    </option>
                    <option value="2034">
                      2034
                    </option>
                  </select>
                  <button aria-label="Reset Calendar" class="reset-btn">
                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                      <path d="M48.5 224L40 224c-13.3 0-24-10.7-24-24L16 72c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2L98.6 96.6c87.6-86.5 228.7-86.2 315.8 1c87.5 87.5 87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3c-62.2-62.2-162.7-62.5-225.3-1L185 183c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8L48.5 224z"></path>
                    </svg>
                  </button>
                </div>
                <button aria-label="Next Month" class="btn-outline-secondary range-picker-nav-btn">
                  <svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                    <path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s-32.8-12.5 45.3 0l160 160z"></path>
                  </svg>
                </button>
              </div>
              <div class="range-picker">
                <div aria-label="Calendars" class="calendar-wrapper" role="application" tabindex="0">
                  <div aria-label="Calendar for February 2026" aria-roledescription="Calendar" class="calendar dp-calendar form-control h-auto pt-2 text-center" role="grid" tabindex="0">
                    <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="calendar-grid-caption">
                      February 2026
                    </div>
                    <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
                      <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                        Sun
                      </small>
                      <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                        Mon
                      </small>
                      <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                        Tue
                      </small>
                      <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                        Wed
                      </small>
                      <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                        Thu
                      </small>
                      <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                        Fri
                      </small>
                      <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                        Sat
                      </small>
                    </div>
                    <div class="calendar-grid" role="grid">
                      <div aria-label="February 1, 2026" class="calendar-grid-item csm-first-day" data-date="2026-02-01" data-day="1" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="February 2, 2026" class="calendar-grid-item" data-date="2026-02-02" data-day="2" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="February 3, 2026" class="calendar-grid-item" data-date="2026-02-03" data-day="3" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="February 4, 2026" class="calendar-grid-item" data-date="2026-02-04" data-day="4" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="February 5, 2026" class="calendar-grid-item" data-date="2026-02-05" data-day="5" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="February 6, 2026" class="calendar-grid-item" data-date="2026-02-06" data-day="6" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="February 7, 2026" class="calendar-grid-item" data-date="2026-02-07" data-day="7" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="February 8, 2026" class="calendar-grid-item" data-date="2026-02-08" data-day="8" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="February 9, 2026" class="calendar-grid-item" data-date="2026-02-09" data-day="9" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="February 10, 2026" class="calendar-grid-item" data-date="2026-02-10" data-day="10" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="February 11, 2026" class="calendar-grid-item" data-date="2026-02-11" data-day="11" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          11
                        </span>
                      </div>
                      <div aria-label="February 12, 2026" class="calendar-grid-item" data-date="2026-02-12" data-day="12" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          12
                        </span>
                      </div>
                      <div aria-label="February 13, 2026" class="calendar-grid-item" data-date="2026-02-13" data-day="13" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          13
                        </span>
                      </div>
                      <div aria-label="February 14, 2026" class="calendar-grid-item" data-date="2026-02-14" data-day="14" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          14
                        </span>
                      </div>
                      <div aria-label="February 15, 2026" class="calendar-grid-item" data-date="2026-02-15" data-day="15" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          15
                        </span>
                      </div>
                      <div aria-label="February 16, 2026" class="calendar-grid-item" data-date="2026-02-16" data-day="16" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          16
                        </span>
                      </div>
                      <div aria-label="February 17, 2026" class="calendar-grid-item" data-date="2026-02-17" data-day="17" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          17
                        </span>
                      </div>
                      <div aria-label="February 18, 2026" class="calendar-grid-item" data-date="2026-02-18" data-day="18" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light current-day font-weight-bold rounded-circle text-dark text-nowrap">
                          18
                        </span>
                      </div>
                      <div aria-label="February 19, 2026" class="calendar-grid-item" data-date="2026-02-19" data-day="19" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          19
                        </span>
                      </div>
                      <div aria-label="February 20, 2026" class="calendar-grid-item" data-date="2026-02-20" data-day="20" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          20
                        </span>
                      </div>
                      <div aria-label="February 21, 2026" class="calendar-grid-item" data-date="2026-02-21" data-day="21" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          21
                        </span>
                      </div>
                      <div aria-label="February 22, 2026" class="calendar-grid-item" data-date="2026-02-22" data-day="22" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          22
                        </span>
                      </div>
                      <div aria-label="February 23, 2026" class="calendar-grid-item" data-date="2026-02-23" data-day="23" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          23
                        </span>
                      </div>
                      <div aria-label="February 24, 2026" class="calendar-grid-item" data-date="2026-02-24" data-day="24" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          24
                        </span>
                      </div>
                      <div aria-label="February 25, 2026" class="calendar-grid-item" data-date="2026-02-25" data-day="25" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          25
                        </span>
                      </div>
                      <div aria-label="February 26, 2026" class="calendar-grid-item" data-date="2026-02-26" data-day="26" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          26
                        </span>
                      </div>
                      <div aria-label="February 27, 2026" class="calendar-grid-item" data-date="2026-02-27" data-day="27" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          27
                        </span>
                      </div>
                      <div aria-label="February 28, 2026" class="calendar-grid-item csm-last-day" data-date="2026-02-28" data-day="28" data-month="2" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          28
                        </span>
                      </div>
                      <div aria-label="March 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-01" data-day="1" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="March 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-02" data-day="2" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="March 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-03" data-day="3" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="March 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-04" data-day="4" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="March 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-05" data-day="5" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="March 6, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-06" data-day="6" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="March 7, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-07" data-day="7" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="March 8, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-08" data-day="8" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="March 9, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-09" data-day="9" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="March 10, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-10" data-day="10" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="March 11, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-11" data-day="11" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          11
                        </span>
                      </div>
                      <div aria-label="March 12, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-12" data-day="12" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          12
                        </span>
                      </div>
                      <div aria-label="March 13, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-13" data-day="13" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          13
                        </span>
                      </div>
                      <div aria-label="March 14, 2026" class="calendar-grid-item next-month-day" data-date="2026-03-14" data-day="14" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          14
                        </span>
                      </div>
                    </div>
                  </div>
                  <div aria-label="Calendar for March 2026" aria-roledescription="Calendar" class="calendar dp-calendar form-control h-auto pt-2 text-center" role="grid" tabindex="0">
                    <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="calendar-grid-caption">
                      March 2026
                    </div>
                    <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
                      <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                        Sun
                      </small>
                      <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                        Mon
                      </small>
                      <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                        Tue
                      </small>
                      <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                        Wed
                      </small>
                      <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                        Thu
                      </small>
                      <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                        Fri
                      </small>
                      <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                        Sat
                      </small>
                    </div>
                    <div class="calendar-grid" role="grid">
                      <div aria-label="March 1, 2026" class="calendar-grid-item cem-first-day" data-date="2026-03-01" data-day="1" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="March 2, 2026" class="calendar-grid-item" data-date="2026-03-02" data-day="2" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="March 3, 2026" class="calendar-grid-item" data-date="2026-03-03" data-day="3" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="March 4, 2026" class="calendar-grid-item" data-date="2026-03-04" data-day="4" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="March 5, 2026" class="calendar-grid-item" data-date="2026-03-05" data-day="5" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="March 6, 2026" class="calendar-grid-item" data-date="2026-03-06" data-day="6" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="March 7, 2026" class="calendar-grid-item" data-date="2026-03-07" data-day="7" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="March 8, 2026" class="calendar-grid-item" data-date="2026-03-08" data-day="8" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="March 9, 2026" class="calendar-grid-item" data-date="2026-03-09" data-day="9" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="March 10, 2026" class="calendar-grid-item" data-date="2026-03-10" data-day="10" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="March 11, 2026" class="calendar-grid-item" data-date="2026-03-11" data-day="11" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          11
                        </span>
                      </div>
                      <div aria-label="March 12, 2026" class="calendar-grid-item" data-date="2026-03-12" data-day="12" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          12
                        </span>
                      </div>
                      <div aria-label="March 13, 2026" class="calendar-grid-item" data-date="2026-03-13" data-day="13" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          13
                        </span>
                      </div>
                      <div aria-label="March 14, 2026" class="calendar-grid-item" data-date="2026-03-14" data-day="14" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          14
                        </span>
                      </div>
                      <div aria-label="March 15, 2026" class="calendar-grid-item" data-date="2026-03-15" data-day="15" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          15
                        </span>
                      </div>
                      <div aria-label="March 16, 2026" class="calendar-grid-item" data-date="2026-03-16" data-day="16" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          16
                        </span>
                      </div>
                      <div aria-label="March 17, 2026" class="calendar-grid-item" data-date="2026-03-17" data-day="17" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          17
                        </span>
                      </div>
                      <div aria-label="March 18, 2026" class="calendar-grid-item" data-date="2026-03-18" data-day="18" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          18
                        </span>
                      </div>
                      <div aria-label="March 19, 2026" class="calendar-grid-item" data-date="2026-03-19" data-day="19" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          19
                        </span>
                      </div>
                      <div aria-label="March 20, 2026" class="calendar-grid-item" data-date="2026-03-20" data-day="20" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          20
                        </span>
                      </div>
                      <div aria-label="March 21, 2026" class="calendar-grid-item" data-date="2026-03-21" data-day="21" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          21
                        </span>
                      </div>
                      <div aria-label="March 22, 2026" class="calendar-grid-item" data-date="2026-03-22" data-day="22" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          22
                        </span>
                      </div>
                      <div aria-label="March 23, 2026" class="calendar-grid-item" data-date="2026-03-23" data-day="23" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          23
                        </span>
                      </div>
                      <div aria-label="March 24, 2026" class="calendar-grid-item" data-date="2026-03-24" data-day="24" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          24
                        </span>
                      </div>
                      <div aria-label="March 25, 2026" class="calendar-grid-item" data-date="2026-03-25" data-day="25" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          25
                        </span>
                      </div>
                      <div aria-label="March 26, 2026" class="calendar-grid-item" data-date="2026-03-26" data-day="26" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          26
                        </span>
                      </div>
                      <div aria-label="March 27, 2026" class="calendar-grid-item" data-date="2026-03-27" data-day="27" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          27
                        </span>
                      </div>
                      <div aria-label="March 28, 2026" class="calendar-grid-item" data-date="2026-03-28" data-day="28" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          28
                        </span>
                      </div>
                      <div aria-label="March 29, 2026" class="calendar-grid-item" data-date="2026-03-29" data-day="29" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          29
                        </span>
                      </div>
                      <div aria-label="March 30, 2026" class="calendar-grid-item" data-date="2026-03-30" data-day="30" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          30
                        </span>
                      </div>
                      <div aria-label="March 31, 2026" class="calendar-grid-item cem-last-day" data-date="2026-03-31" data-day="31" data-month="3" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                          31
                        </span>
                      </div>
                      <div aria-label="April 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-01" data-day="1" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          1
                        </span>
                      </div>
                      <div aria-label="April 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-02" data-day="2" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          2
                        </span>
                      </div>
                      <div aria-label="April 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-03" data-day="3" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          3
                        </span>
                      </div>
                      <div aria-label="April 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-04" data-day="4" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          4
                        </span>
                      </div>
                      <div aria-label="April 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-05" data-day="5" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          5
                        </span>
                      </div>
                      <div aria-label="April 6, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-06" data-day="6" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          6
                        </span>
                      </div>
                      <div aria-label="April 7, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-07" data-day="7" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          7
                        </span>
                      </div>
                      <div aria-label="April 8, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-08" data-day="8" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          8
                        </span>
                      </div>
                      <div aria-label="April 9, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-09" data-day="9" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          9
                        </span>
                      </div>
                      <div aria-label="April 10, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-10" data-day="10" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          10
                        </span>
                      </div>
                      <div aria-label="April 11, 2026" class="calendar-grid-item next-month-day" data-date="2026-04-11" data-day="11" data-month="4" data-year="2026" role="gridcell" tabindex="-1">
                        <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                          11
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <footer class="border-top small text-center">
                  <div aria-live="polite" class="small">
                    Use cursor keys to navigate calendar dates
                  </div>
                </footer>
                <div aria-labelledby="date-ranges" class="date-range-display" role="region" tabindex="0">
                  <div class="date-ranges" id="date-ranges">
                    <span class="start-end-ranges">
                      <span class="start-date">
                        N/A
                      </span>
                      <span class="to-spacing">
                        -
                      </span>
                      <span class="end-date">
                        N/A
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div class="ok-button">
                <button aria-label="Confirm or close date picker" class="btn btn-primary">
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</date-range-picker-component>
`;
